--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 input[type=text]{
   width: 100%;
   width: 50%;
-  height: 130%;
+  height: 500%;
   box-sizing: border-box;
   margin: 8px 0;
   border-radius: 50px;
   border: 2px solid red;
 }
 
+input[type=submit]{
+  border-radius: 50px;
+  text-align: center;
+}
