--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ input[type=text]{
   box-sizing: border-box;
   margin: 8px 0;
   border-radius: 50px;
-  border: 2px solid red;
+  border: 2px solid gainsboro;
 }
 
 input[type=submit]{
