--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ input[type=text]{
 }
 
 input[type=submit]{
-  border-radius: 50px;
+  border-radius: 10px;
   text-align: center;
+  border: 2px solid gainsboro;
 }
