--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 input[type=text]{
   width: 100%;
   width: 50%;
-  height: 500%;
   box-sizing: border-box;
   margin: 8px 0;
   border-radius: 50px;
-  border: 2px solid gainsboro;
+  border: 2px solid black;
 }
 
 input[type=submit]{
