--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ input[type=text]{
   width: 50%;
   box-sizing: border-box;
   margin: 8px 0;
+  padding: 80px 20px;
   border-radius: 50px;
-  border: 2px solid black;
+  border: 2px solid gainsboro;
 }
 
 input[type=submit]{
