--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ input[type=text]{
   width: 100%;
   width: 50%;
   box-sizing: border-box;
-  margin: 8px 0;
-  padding: 80px 20px;
+  margin: auto;
+  padding: 40px 20px;
   border-radius: 50px;
   border: 2px solid gainsboro;
 }
