--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-input[type=text]{
+.center{
   width: 100%;
   width: 50%;
   box-sizing: border-box;
   margin: auto;
-  padding: 20px 20px;
+  padding: 15px 20px;
   border-radius: 50px;
-  border: 2px solid gainsboro;
+  border: 1px solid gainsboro;
 }
 
 input[type=submit]{
