--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+form{
+  text-align: center;
+}
 .center {
   width: 50%;
   box-sizing: border-box;
-  margin: auto;
   padding: 15px 20px;
   border-radius: 50px;
   border: 1px solid gainsboro;
