--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 form{
   margin-top: 50px;
   text-align: center;
-  width: 50%;
 }
 .center {
   width: 50%;
@@ -12,6 +11,7 @@ form{
 }
 
 input[type=submit]{
+  margin-top: 20px;
   border-radius: 10px;
   text-align: center;
   border: 2px solid gainsboro;
