--- a/style.css
+++ b/style.css
@@ -3,12 +3,6 @@ form{
   margin-top: 50px;
   text-align: center;
 }
-
-.box{
-   width: 50%;
-   border: 1px solid;
-}
-
 .center {
   width: 50%;
   box-sizing: border-box;
@@ -17,10 +11,11 @@ form{
   border: 1px solid gainsboro;
 }
 
-input[type=submit]{
+.row{
   margin-left: 50px;
   margin-top: 20px;
   border-radius: 10px;
   text-align: center;
   border: 2px solid gainsboro;
+  cursor: pointer;
 }
