--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-form{
+.container{
   border: 1px solid;
   margin-top: 50px;
   text-align: center;
@@ -9,7 +9,6 @@ form{
   padding: 15px 20px;
   border-radius: 50px;
   border: 1px solid gainsboro;
-  text-align: center;
 }
 
 .row{
