--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 .row{
   margin-left: 50px;
   margin-top: 20px;
+  width: 30%;
   border-radius: 10px;
   text-align: center;
   border: 2px solid gainsboro;
