--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 .row{
   margin-left: 50px;
   margin-top: 20px;
-  width: 30%;
+  width: 10%;
+  padding: 10px 20px;
   border-radius: 10px;
   text-align: center;
   border: 2px solid gainsboro;
