--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container{
-  margin-top: 50px;
-  text-align: center;
+  margin: auto;
+  width: 50px;
 }
 .center {
   width: 50%;
@@ -17,6 +17,6 @@
   padding: 10px 20px;
   border-radius: 10px;
   text-align: center;
-  border: 2px solid gainsboro;
+  border: 1px solid lightgray;
   cursor: pointer;
 }
