--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .container{
   margin: auto;
   width: 50px;
+  border: 1px solid;
 }
 .center {
   width: 50%;
@@ -8,6 +9,7 @@
   padding: 15px 20px;
   border-radius: 50px;
   border: 1px solid gainsboro;
+  text-decoration: none;
 }
 
 .row{
