--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-.container{
+.container {
   margin: auto;
   width: 80%;
   border: 1px solid;
-  text-align: center;
 }
 .center {
   width: 50%;
@@ -10,6 +9,7 @@
   padding: 15px 20px;
   border-radius: 50px;
   border: 1px solid gainsboro;
+  margin: auto;
 }
 
 .row{
