--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 .row{
   width: 10%;
   padding: 10px 20px;
+  margin: auto;
   border-radius: 10px;
   text-align: center;
   border: 1px solid lightgray;
