--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 .center{
   margin: auto;
-  width: 90%;
+  width: 70%;
 }
 input[type=text] {
   width: 100%;
@@ -16,10 +16,12 @@ input[type=text] {
   background-repeat: no-repeat;
 }
 
-input[type=submit]{
+.row{
   width: 10%;
-  padding: 10px 20px;
   margin: auto;
+}
+input[type=submit]{
+  padding: 10px 20px;
   margin-top: 15px;
   text-align: center;
   border: 1px solid lightgray;
