--- a/style.css
+++ b/style.css
@@ -18,18 +18,20 @@ input[type=text] {
 
 .bottons{
    margin:auto;
-   width: 20%;
+   width: 15%;
    text-align: center;
 }
 
 .row1{
   width: 10%;
   float: left;
+  box-sizing: border-box;
 }
 
 .row2{
   width: 10%;
   float: right;
+  box-sizing: border-box;
 }
 
 input[type=submit]{
