--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ input[type=text] {
 .bottons{
    margin:auto;
    width: 60%;
+   box-sizing: border-box;
    text-align: center;
    border: 1px solid;
 }
