--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ input[type=text] {
   background-repeat: no-repeat;
 }
 
-.bottons{
+.buttons{
    margin:auto;
    width: 30%;
    border: 1px solid;
@@ -25,15 +25,13 @@ input[type=text] {
 .row1{
   width: 10%;
   float: left;
-  box-sizing: border-box;
+  border: 1px solid;
 }
 
 .row2{
   width: 10%;
   float: right;
-  box-sizing: border-box;
-  margin-right: 0%;
-  margin-left: 0%;
+  border: 1px solid;
 }
 
 input[type=submit]{
