--- a/style.css
+++ b/style.css
@@ -23,21 +23,19 @@ input[type=text] {
 }
 
 .row1{
-  width: 50%;
+  width: 45%;
   float: left;
-  border: 1px solid;
 }
 
 .row2{
-  width: 50%;
+  width: 45%;
   float: right;
-  border: 1px solid;
 }
 
 input[type=submit]{
   padding: 10px 20px;
   margin-top: 15px;
   text-align: center;
-  border: 1px solid lightgray;
+  border: 1px solid ghostwhite;
   cursor: pointer;
 }
